Handle no content responses with Accept header